--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,7 +17,7 @@ nav:
 theme:
   name: material
   logo: assets/logo.png
-  favicon: assets/logo_small.png
+  favicon: assets/logo.png
   # custom_dir: overrides
   features:
     - announce.dismiss
